2013-02-21  Zhenyao Mo  <zmo@google.com>

        Roll ANGLE to r1833
        https://bugs.webkit.org/show_bug.cgi?id=110513

        Reviewed by Kenneth Russell.

        Upstream ANGLE r1833 includes webkit side local fixes
        1) r139758 build fix for -Wshorten-64-to-32
        2) r139665 build fix for uninitialized variables

        After this roll, WebKit side ANGLE is the same as upstream ANGLE r1833, except:
        1) include/GLSLANG/ShaderLang.h, where "KHR" is removed from include path.

        With this roll, we have EXT_draw_buffers support.
        
        * ANGLE.xcodeproj/project.pbxproj:
        * Target.pri:
        * include/GLSLANG/ShaderLang.h:
        * src/common/debug.cpp:
        * src/common/system.h: Added.
        * src/common/version.h:
        * src/compiler/ArrayBoundsClamper.cpp: Removed.
        * src/compiler/ArrayBoundsClamper.h: Removed.
        * src/compiler/Compiler.cpp:
        (TCompiler::TCompiler):
        (TCompiler::Init):
        (TCompiler::compile):
        (TCompiler::getArrayBoundsClamper):
        (TCompiler::getArrayIndexClampingStrategy):
        (TCompiler::getBuiltInFunctionEmulator):
        * src/compiler/DetectDiscontinuity.cpp:
        (sh::DetectLoopDiscontinuity::traverse):
        (sh::DetectLoopDiscontinuity::visitLoop):
        (sh):
        (sh::DetectLoopDiscontinuity::visitBranch):
        * src/compiler/DetectDiscontinuity.h:
        (DetectLoopDiscontinuity):
        * src/compiler/Initialize.cpp:
        (InitExtensionBehavior):
        * src/compiler/Intermediate.cpp:
        (TIntermConstantUnion::fold):
        (TIntermTraverser::hash):
        * src/compiler/MapLongVariableNames.cpp:
        (LongNameMap::Size):
        (MapLongVariableNames::mapGlobalLongName):
        * src/compiler/MapLongVariableNames.h:
        (LongNameMap):
        * src/compiler/OutputESSL.cpp:
        (TOutputESSL::TOutputESSL):
        * src/compiler/OutputESSL.h:
        (TOutputESSL):