@@ -1,3 +1,12 @@
+2013-02-22  Kenneth Russell  <kbr@google.com>
+
+        Mac OS build broken by new ExpressionParser.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=110629
+
+        Unreviewed build fix. Regenerated ExpressionParser with Bison 2.3.
+
+        * src/compiler/preprocessor/ExpressionParser.cpp:
+
 2013-02-21  Zhenyao Mo  <zmo@google.com>
 
         Roll ANGLE to r1833
